		  fixed red marking of folders with shared subdirectories
		* Ban clients that uploaded bad data (based on CorruptionBlackBox from eMule)
		* Support wxWidgets 2.9
		* amuled for Windows (with wx 2.9)
		* Friends get recognized in the friend list control even if their IP has changed
		* "Last Reception" in remote gui
		* Fixed client information in remote gui

	Vollstrecker:
		* Unify copyright lines
		* Fixed clean and distclean targets for make
		* Various Updates in debian/ see debian/changelog
		* Added crash handling in command-line tools

	Wuischke:
		* Simplify browser selection
		* Use DoIconize() for dclick on tray icon, too
		* Fix minimizing from tray icon
		* Add option to show chat messages in log
		* Add option to specify amuleweb binary location
		* Fix amuleweb progress bar display for files > 4GB
		* Make EC authentication procedure more secure
		* Add support for categories to ed2k

	Special Thanks To:
		* Greek for his contributions to aMule's user interface.
		* btkaos for his important work finding the source of bugs.
		* myth for seeing when everyone else was blind and uncovering
		  the grandfather of all fuck-ups

--------------------------------------------------------------------------------

Version 2.2.5 - The "never say never" version.
----------
2009-05-16

	GonoszTopi:
		* Fixed possible security hole when previewing filenames containing single quotes
		* Fixed default webserver port

	Stu Redman:
		* Fixed upload of the last part of a file which he broke in 2.2.4
		* Fixed setting speed limits from remote gui's tray icon

	Special Thanks To:
		* CroMag for pointing out the upload problem

--------------------------------------------------------------------------------

Version 2.2.4 - The "we didn't have a .4 version since... well... long ago" version.
----------
2009-04-03

	freddy77:
		* Plugged various memory leaks.

	FreeToGo:
		* Add comment to desktop file to allow autostart in Gnome

	gabrielix: